--- a/Versão 3/index.html
+++ b/Versão 3/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <div class="icones-usuario">
-      <a href="#"><i class="fas fa-user-circle"></i> Meu Perfil</a>
+      <a href="perfil.html"><i class="fas fa-user-circle"></i> Meu Perfil</a>
       <a href="#"><i class="fas fa-cog"></i> Configurações</a>
     </div>
   </aside>
