--- a/Versão 3/testes.html
+++ b/Versão 3/testes.html
@@ -17,7 +17,7 @@
                 <i class="fas fa-chevron-left"></i>
             </button>
         </div>
-        <a href="index.html">Página Inicial</a>
+        <a href="index.html">Inicio</a>
         <a href="artigos.html">Artigos</a>
         <a href="videos.html" class="active">Vídeos <i class="fas fa-play-circle"></i></a>
         <a href="testes.html">Testes <i class="fas fa-tasks"></i></a>
@@ -74,7 +74,8 @@
             <span class="nome-usuario">Nome do Usuário</span>
         </div>
         <div class="icones-usuario">
-            <a href="#">Meu perfil <i class="fas fa-user-circle"></i></a>
+            <a href="perfil.html"><i class="fas fa-user-circle"></i> Meu Perfil</a>
+            <a href="#"><i class="fas fa-cog"></i> Configurações</a>
         </div>
     </aside>
 
