--- a/Versão 3/videos.html
+++ b/Versão 3/videos.html
@@ -15,7 +15,7 @@
                 <i class="fas fa-chevron-left"></i>
             </button>
         </div>
-        <a href="index.html">Página Inicial</a>
+        <a href="index.html">Inicio</a>
         <a href="artigos.html">Artigos</a>
         <a href="videos.html" class="active">Videos <i class="fas fa-play-circle"></i></a>
         <a href="testes.html">Testes <i class="fas fa-tasks"></i></a>
@@ -44,7 +44,8 @@
             <span class="nome-usuario">Nome do Usuário</span>
         </div>
         <div class="icones-usuario">
-            <a href="#"><i class="fas fa-user-circle"></i></a>
+            <a href="perfil.html"><i class="fas fa-user-circle"></i> Meu Perfil</a>
+            <a href="#"><i class="fas fa-cog"></i> Configurações</a>
         </div>
     </aside>
 
