--- a/Versão 3/artigos.html
+++ b/Versão 3/artigos.html
@@ -15,28 +15,31 @@
                 <i class="fas fa-chevron-left"></i>
             </button>
         </div>
-        <a href="index.html" class="active">Inicio</a>
-        <a href="artigos.html">Artigos</a>
-        <a href="videos.html">Videos <i class="fas fa-play-circle"></i></a>
-        <a href="testes.html">Testes <i class="fas fa-tasks"></i></a>
+    <a href="index.html"><i class="fas fa-home"></i> Início</a>
+    <a href="artigos.html"><i class="fas fa-file-alt"></i> Artigos</a>
+    <a href="videos.html"><i class="fas fa-play-circle"></i> Vídeos</a>
+    <a href="testes.html"><i class="fas fa-tasks"></i> Testes</a>
     </div>
 
     <div id="content">
         <h1>Catálogo de Artigos</h1>
         <div class="article-option">
-            <p>Aqui seria colocado uma opção de artigo.</p>
+            <a href="https://thehackernews.com/" target="_blank">The Hacker News - Últimas Notícias de Segurança</a>
         </div>
         <div class="article-option">
-            <p>Aqui seria colocado uma opção de artigo.</p>
+            <a href="https://www.kaspersky.com.br/blog/" target="_blank">Blog da Kaspersky Brasil</a>
         </div>
         <div class="article-option">
-            <p>Aqui seria colocado uma opção de artigo.</p>
+            <a href="https://www.cisecurity.org/" target="_blank">Center for Internet Security</a>
         </div>
         <div class="article-option">
-            <p>Aqui seria colocado uma opção de artigo.</p>
+            <a href="https://www.darkreading.com/" target="_blank">Dark Reading - Threat Intelligence</a>
         </div>
         <div class="article-option">
-            <p>Aqui seria colocado uma opção de artigo.</p>
+            <a href="https://repositorio.ufu.br/bitstream/123456789/36792/1/FatoresHumanosCibersegurança.pdf" target="_blank">Fatores Humanos em Cybersegurança</a>
+        </div>
+        <div class="article-option">
+            <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjbkvqq77iQAxVer5UCHbxYINsQFnoECA4QAQ&url=https%3A%2F%2Frocketseat.com.br%2Fblog%2Fartigos%2Fpost%2Fo-que-voce-precisa-saber-sobre-cybersecurity&usg=AOvVaw12edjB6WJIxRI82KpHUm78&opi=89978449" target="_blank">Cybersegurity: O que você precisa saber</a>
         </div>
     </div>
 
