--- a/Versão 3/index.html
+++ b/Versão 3/index.html
@@ -17,8 +17,8 @@
         <i class="fas fa-chevron-left"></i>
       </button>
     </div>
-    <a href="index.html" class="active"><i class="fas fa-home"></i>  Início</a>
-    <a href="artigos.html"><i class="fas fa-file-alt"></i>  Artigos</a>
+    <a href="index.html"><i class="fas fa-home"></i> Início</a>
+    <a href="artigos.html"><i class="fas fa-file-alt"></i> Artigos</a>
     <a href="videos.html"><i class="fas fa-play-circle"></i> Vídeos</a>
     <a href="testes.html"><i class="fas fa-tasks"></i> Testes</a>
   </div>
