--- a/Versão 3/videos.html
+++ b/Versão 3/videos.html
@@ -15,10 +15,10 @@
                 <i class="fas fa-chevron-left"></i>
             </button>
         </div>
-        <a href="index.html">Inicio</a>
-        <a href="artigos.html">Artigos</a>
-        <a href="videos.html" class="active">Videos <i class="fas fa-play-circle"></i></a>
-        <a href="testes.html">Testes <i class="fas fa-tasks"></i></a>
+    <a href="index.html"><i class="fas fa-home"></i> Início</a>
+    <a href="artigos.html"><i class="fas fa-file-alt"></i> Artigos</a>
+    <a href="videos.html"><i class="fas fa-play-circle"></i> Vídeos</a>
+    <a href="testes.html"><i class="fas fa-tasks"></i> Testes</a>
     </div>
 
     <div id="content">
@@ -27,6 +27,14 @@
             <p>Vídeo Exemplo</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/NBPOCB05o9E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+        <div class="article-option">
+            <p>Vídeo Exemplo</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=Gfh2bxe3hGU&pp=ygUddmlkZW9zIHNvYnJlIGN5YmVyIHNlZ3VyYW7Dp2E%3D" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="article-option">
+            <p>Vídeo Exemplo</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=MPnvRdNGd8A&pp=ygUddmlkZW9zIHNvYnJlIGN5YmVyIHNlZ3VyYW7Dp2HSBwkJBgoBhyohjO8%3D" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>       
         <div class="article-option">
             <p>Aqui seria colocado uma opção de vídeo e assim por diante.</p>
         </div>
